<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sentry_state_publisher</name>
  <version>0.0.0</version>
  <description>Examples of simple urdf</description>
  <maintainer email="maintainer@example.com">Maintainer Name</maintainer>
  <license>apach 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf_launch</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
